家庭版代码修改

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/pay_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/pay_result.vm
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<div class="container">
+<!--<div class="container">
 	  <div id="header">
 		<div class="topNav">
 			<div class="container">
@@ -27,7 +27,7 @@
 				<a href="${staticDomain}/family/helpAbout.htm">帮助中心</a>
 			</div>
         </div>
-    </div>
+    </div>-->
     <div class="body">
         <div class="inner container-find">
            <div class="title clearfix">
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-	  <div class="footer footer-simple">
+<!--	  <div class="footer footer-simple">
     <div class="inner clearfix">
         <div class="logo fl">
             <img src="${staticDomain}/static/family/images/logo_130x55.png">
@@ -66,7 +66,7 @@
             </ul>
         </div>
     </div>
-</div>
+	</div>-->
 </div>
 <script src="${staticDomain}/static/family/scripts/load.js"></script>
 </body>
