--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/findPasswordStep3.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/findPasswordStep3.vm
@@ -34,7 +34,7 @@
                     <div class="form-done">
                         <div class="title">新密码设置成功</div>
                         <div class="tips">请牢记新密码</div>
-                        <a class="btn" href="javascript:;">我的账户</a>
+                        <a class="btn" href="${staticDomain}/family/session.htm">我的账户</a>
                     </div>
                 </div>
             </div>
