--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account.vm
@@ -27,7 +27,7 @@
                 <p class="fr">
                     银行卡已添加 <strong class="num-blue">$!{hft_family_trade_size}</strong> 张
                     <a href="${staticDomain}/family/settingCard.htm" class="addMargin">查看全部</a>
-                    <a id="addBankCard" href="#">+新卡</a>
+                    <a id="addBankCard" href="#" isufbCard="$!{isufbCard}">+新卡</a>
                 </p>
             </div>
 			<div class="myaccount">
@@ -258,12 +258,20 @@
         });
 
 	$("#addBankCard").on("click",function(){
+	    var isufbCard=$(this).attr("isufbCard");
+	   
 		var cardcount=$(".num-blue").html();
 		if(cardcount>=2){
 			alert("对不起，您最多只能添加两张银行卡");
 			return false;
 		}
-		window.open("${staticDomain}/family/addBankCard.htm","_blank");
+		 else{
+		  	if(isufbCard=="Y"){
+				alert("对不起，您只能添加一张幼富通银行卡");
+				return false;
+			} 
+		 }
+		window.location.href="${staticDomain}/family/addBankCard.htm";
 		//$("#addBankCard").attr("href","${staticDomain}/family/addBankCard.htm").click();
 	});
 		
