--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStepU1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStepU1.vm
@@ -89,7 +89,7 @@ $(function(){
                             <span class="form-title">银行选择</span>
                             <div class="input-select">
 								<div class="card card-current">
-                                    <img src="${staticDomain}/images/bank_${curCard.bankno}.png">
+                                    <img src="${staticDomain}/static/family/images/bank_${curCard.bankno}.png">
                                     <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                 </div>
 								<div class="input-options">
@@ -103,7 +103,7 @@ $(function(){
 											frombankno="${card.bankno}"
 											frombanktail="$tailStr.substring($start,$end)"
 											>
-    										<img src="${staticDomain}/images/bank_${card.bankno}.png">
+    										<img src="${staticDomain}/static/family/images/bank_${card.bankno}.png">
                                             <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                         </a>
     									#end
