--- a/ufb.web/src/main/webapp/WEB-INF/templates/layout/default_error.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/layout/default_error.vm
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-#parse("control/common/head_0.vm")
+#parse("control/common/head_2.vm")
 <body>	
-<div class="container center">
+<div class="container">
 #parse("control/common/header_0_error.vm")
 $body
-#parse("control/common/footer_1.vm")
+#parse("control/common/footer_0.vm")
 </div>
 $!{script}
 </body>
