家庭版代码修改

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingAutoFund.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingAutoFund.vm
@@ -37,7 +37,15 @@ $(function(){
 		$("#form-autoTrade-index").attr("action", "../family/autoTrade_delete.htm");
 		$("#form-autoTrade-index").submit();
 	});
-	
+	#if("PR"==$TAB) 
+		errorBox("暂停自动充值成功","成功！");
+	#end
+	#if("CR"==$TAB) 
+		errorBox("终止自动充值成功","成功！");
+	#end
+	#if("DR"==$TAB) 
+		errorBox("删除 自动充值成功","成功！");
+	#end
 	})
     </script>
 </head>
