--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingPassword.vm
@@ -13,24 +13,39 @@ $(function(){
     });
 	
 	//修改登录密码按钮
-	$("#btn-settingLoginPwd").on("click",function(){
-		if(!check_null($("#login_password0"), "密码不能为空")){
+	$("#btn-updateLoginPwd1").on("click",function(){
+		if(!check_mobile($("#mobileno"))){
 			return false;
 		}
-		if(!check_pwd1($("#login_password1"))){
+		//if(!check_phoneCode($("#msgcode"))){
+		//	return false;
+		//}
+		if(!check_code($("#verifycode"))){
 			return false;
 		}
-		if(!check_pwd2($("#login_password2"))){
-			return false;
-		}
-		var errLen = $("#form-settingLoginPwd ul li.error").length;
+		var errLen = $("#form-findstep1 ul li.error").length;
 		if(errLen>0){
 			$("ul li.error:eq(0) input[type=text]").focus();
 			$("ul li.error:eq(0) input[type=password]").focus();
 		}else{
-			$("#form-settingLoginPwd").submit();
+			$("#form-findstep1").submit();
 		}
 	});
+	
+	$("#btn-updateLoginPwd2").on("click",function(){
+		if(!check_pwd1($("#password1"))){
+			return false;
+		}
+		var errLen = $("#form-findstep1 ul li.error").length;
+		if(errLen>0){
+			$("ul li.error:eq(0) input[type=text]").focus();
+			$("ul li.error:eq(0) input[type=password]").focus();
+		}else{
+			$("#form-findstep1").attr("action","../family/updatePasswordStep2.htm");
+			$("#form-findstep1").submit();
+		}
+	});
+	
 	
 	#if($S_CUSTINFO.tradepwd)
 	//修改交易密码按钮
@@ -76,6 +91,12 @@ $(function(){
 	// btn-getMsgCode
 	var countDown;
 	$("#btn-getMsgCode").on("click",function(){
+		if(!check_mobile($("#mobileno"))){
+			return false;
+		}
+		if(!check_code($("#verifycode"))){
+			return false;
+		}
         $.ajax({
      		type: "GET",
     		url: "../family/getMsgCode.ajax",
@@ -109,14 +130,21 @@ $(function(){
             				setTimeout(countDown, 1000);
             			}
             		}
+					$(".ipt-phoneCode").siblings(".tips-check").attr("style","display:none");
+					$(".ipt-phoneCode").parent().removeClass("error");
                 } else {
                   	var errCode = b.errCode;
 					var errMsg = b.errMsg;
-					//alert(errCode + ": " + errMsg);
-					if("errMsg_verifycode"==errCode || "errMsg_mobileno"==errCode){
+					alert(errCode + ": " + errMsg);
+					if("errMsg_mobileno"==errCode){
+						$("#errMsg_mobileno").removeClass("ok").addClass("error");
+						$("#errMsg_mobileno > .tips-check").html("<i class=icon></i>" + errMsg);
+					}
+					else if("errMsg_verifycode"==errCode){
 						$("#errMsg_verifycode").removeClass("ok").addClass("error");
 						$("#errMsg_verifycode > .tips-check").html("<i class=icon></i>" + errMsg);
-					}else{
+					}
+					else{
 						alert(errMsg);
 					}
 					var src = $("#btn-verifycode").attr("src");
@@ -125,22 +153,36 @@ $(function(){
         	}
         });
 	});
-	
- #if("2"==$TAB || "2S"==$TAB)
-    $("#tab2").addClass("on");
-    $("#panel2").removeClass("slide-out");
-	
-	$("#panel1").hide();
-	$("#panel2").hide();
-#elseif("3"==$TAB || "3S"==$TAB)
-	$("#tab3").addClass("on");
-    $("#panel3").removeClass("slide-out");
-	
-	$("#panel1").hide();
-	$("#panel2").show();
-#end
 
+#if("1"==$TAB || "1S"==$TAB)
+	    $("#tab1").addClass("on");
+	    $("#panel1").removeClass("slide-out");
+		
+		$("#panel1").show();
+		$("#panel2").hide();
+		$("#panel3").hide();
+#elseif("2"==$TAB || "2S"==$TAB)
+	    $("#tab2").addClass("on");
+	    $("#panel2").removeClass("slide-out");
+	    $("#panel2").show();
+		$("#panel1").hide();
+		$("#panel3").hide();
+#elseif("3"==$TAB || "3S"==$TAB)
+		$("#tab3").addClass("on");
+	    $("#panel3").removeClass("slide-out");
+	    $("#panel3").show();
+		$("#panel1").hide();
+		$("#panel2").show();
+#end
+#if("1"==$TAB2)
+$(".step02").removeClass("slide-out");
+$(".step01").attr("style","display:none;");
+$(".step02").attr("style","display:block;");
+#end
  
+#if("1S"==$TAB)
+	errorBox("修改登录密码","成功！");
+#end
 #if("2S"==$TAB)
 	errorBox("修改交易密码","成功！");
 #end
@@ -186,7 +228,7 @@ $(function(){
             <div class="main fr">
                 <div class="setting-content">
                     <div class="tabs password-tabs clearfix">
-                        <a class="btn fl" href="${staticDomain}/family/findPasswordStep1.htm">修改登录密码</a>
+                        <a id="tab1" class="btn fl" href="${staticDomain}/family/findPasswordStep1.htm">修改登录密码</a>
 						#if($S_CUSTINFO.tradepwd)
                         <a id="tab2" class="btn tab fl" href="javascript:;">修改交易密码</a>
                         <a id="tab3" class="btn tab fl" href="javascript:;">忘记交易密码</a>
@@ -194,8 +236,64 @@ $(function(){
                     </div>
                     <div class="tips">交易密码： 为使用幼富通平台内涉及理财、缴费等资金交易时所需要输入的密码，不可与登录密码相同！</div>
                     <div class="panels password-panels">
+                    <div class="panel1">
+	                    <form class="common-form" id="form-findstep1" action="${staticDomain}/family/updatePasswordStep1.htm" method="post">
+	                        <ul class="step01">
+	                        <li id="errMsg_mobileno" #if($errMsg_mobileno)
+								class="error"
+								#end
+								>
+	                            <span class="form-title">手机号</span>
+	                            <input class="ipt-phoneNum input-text" id="mobileno" name="mobileno" type="text" maxlength="11" value="$!{CustInfoVo.mobileno}">
+	                            <span class="tips-normal">请输入手机号</span>
+	                            <span class="tips-check"><i class="icon"></i>$!{errMsg_mobileno}</span>
+	                        </li>
+	                        <li id="errMsg_verifycode" #if($errMsg_verifycode)
+								class="error"
+								#end
+								>
+	                            <span class="form-title">验证码</span>
+	                            <input id="verifycode" name="verifycode" class="ipt-code input-code" maxlength="4" type="text" value="$!{CustInfoVo.verifycode}">
+	                            <span class="tips-normal">请输入验证码</span>
+	                            <span class="form-verifyCode">
+								<img id="btn-verifycode" src="${staticDomain}/createImageservlet"+"?time="+(+new Date())" onclick="javascript:this.src=this.src+'?time='+(+new Date())"/>
+								</span>
+	                            <span class="tips-check"><i class="icon"></i>$!{errMsg_verifycode}</span>
+	                        </li>
+	                        <li #if($errMsg_msgcode)
+								class="error"
+								#end
+								>
+	                            <span class="form-title">手机验证码</span>
+	                            <input id="msgcode" name="msgcode" class="ipt-phoneCode input-code" maxlength="6" type="text" value="$!{CustInfoVo.msgcode}">
+	                            <span class="tips-normal">6位验证码</span>
+	                            <input id="btn-getMsgCode" class="input-button" type="button" value="获取验证码">
+	                            <span class="tips-check"><i class="icon"></i>$!{errMsg_msgcode}</span>
+	                        </li>
+	                        <li>
+	                            <input id="btn-updateLoginPwd1" class="input-button ok" type="button" value="下一步"  >
+	                        </li>
+	                    </ul>
+	                        <ul class="step02 slide-out">
+	                    <li>
+	                        <span class="form-title">确认新登录密码</span>
+	                        <input id="password1" name="password1" class="ipt-password1 input-text" type="password" value="$!{CustInfoVo.password1}">
+	                        <span class="tips-normal">请再次输入密码</span>
+	                        <span class="tips-check"><i class="icon"></i>验证提示</span>
+	                    </li>
+	                    <li>
+	                        <input id="btn-updateLoginPwd2" class="input-button ok" type="button" value="提&nbsp;交">
+	                    </li>
+	                    </ul>
+	                      <!--  <div class="form-done step03 slide-out" style="margin-top:-200px;">
+	                        <div class="title">新密码设置成功</div>
+	                        <div class="tips">请牢记新密码</div>
+	                        <a class="btn" href="javascript:;">我的账户</a>
+	                    </div>-->
+	                    </form>
+                </div>
 					#if($S_CUSTINFO.tradepwd)
-                        <div class="panel slide-out">
+                        <div class="panel2 slide-out">
                             <form class="common-form" id="form-settingTradePwd" action="${ufbDomain}/family/settingTradePwd.htm" method="post">
 								 ${refreshTools.genInputHtml()}
                                 <ul>
@@ -205,7 +303,7 @@ $(function(){
                                       #end
                                       >
                                         <span class="form-title" >原交易密码</span>
-                                        <input class="input-text" type="password" id="trade_password0" name="password0"  maxlength="20" value="$!{trade_password0}">
+                                        <input class="ipt-password0" type="password" id="trade_password0" name="password0"  maxlength="20" value="$!{trade_password0}">
                                         <span class="tips-normal"></span>
                                         <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password0}</span>
                                     </li>
@@ -235,7 +333,7 @@ $(function(){
                                 </ul>
                             </form>
                         </div>
-                        <div class="panel slide-out">
+                        <div class="panel3 slide-out">
                             <form class="common-form" id="form-settingTradePwd-back" action="${ufbDomain}/family/settingTradePwdBack.htm" method="post">
 								${refreshTools.genInputHtml()}
                                 <ul>
