--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/expire.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/expire.vm
@@ -7,7 +7,7 @@
             <div class="panel">
                 <div class="form-done">
                     <div class="title">你的申请已提交，请勿重复操作！</div>
-                    <a class="btn" href="${ufbDomain}/family/uft_index.htm">
+                    <a class="btn" href="${ufbDomain}/family/uft/uft_index.htm">
                     	我的账户
                     </a>
                     <div class="tips">
