--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/cash_index.vm
@@ -4,41 +4,16 @@
     <title>幼富通 - 资产总览 - 取现</title>
 </head>
 <body>
-<div class="container center">
-<!--
-    <div class="header">
-        <div class="inner clearfix rel">
-            <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-            <div class="nav"><a href="index.html">首页</a>|<a class="current" href="centerClose.html">资产总览</a>|<a href="settingAccount.html">账户管理</a>|<a href="helpNotice.html">帮助中心</a><span class="member" href="javascript:;"><i class="trans icon"></i>啥<a href="javascript:;" class="trans out">安全退出</a></span></div>
-        </div>
-    </div>
---> 
-    <div id="header">
-		<div class="topNav">
-			<div class="container">
-				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
-			</div>
-		</div>
-        <div class="container">
-            <a href="#" class="logo"></a>
-			<div class="nav">
-				<a href="${staticDomain}/family/session.htm">我的账户</a>
-				<a href="${staticDomain}/family/myufb.htm" class="active">幼富宝</a>
-				<a href="#">缴费明细</a>
-				<a href="${staticDomain}/family/helpAbout.htm">帮助中心</a>
-			</div>
-        </div>
-    </div>
+
     <div class="body">
         <div class="inner clearfix">
             <div class="title clearfix">
                 <h2 class="title-main fl">资产总览 | 取现</h2>
             </div>
-            <div class="notice">
+          <!--  <div class="notice">
              <i class="v2_1"></i><p>公告：15:00前转入资金（以支付成功时间为准），第二个工作日确认份额，收益将在确认后次日发放，15:00后转入资金顺延1个工作日发放收益。双休日及国家法定假期，基金公司不进行份额确认。
              </p>
-             </div>
+             </div>-->
             <div class="date-line">
                 <div class="line-point point-left">
                     <div class="point-icon"></div>
@@ -56,7 +31,7 @@
                 </div>
             </div>
             <div class="form-cash">
-                <form class="common-form" action="${ufbDomain}/family/cash_result.htm" method="post">
+                <form class="common-form" action="${ufbDomain}/family/ufb/cash_result.htm" method="post">
 					${refreshTools.genInputHtml()}
 					<input id="tradeacco" name="tradeacco" value="${card.tradeacco}" type="hidden"/>
 					<input id="cardAvailable" name="cardAvailable" value="${card.available}" type="hidden"/>
@@ -74,7 +49,7 @@
                                    #set($tailStr=$card.bankacco)
 								   #set($start=$tailStr.length() - 4)
 								   #set($end=$tailStr.length())
-                                <img src="${staticDomain}/static/family/images/bank_${card.bankno}.png">
+                                <img src="${staticDomain}/family/images/bank_${card.bankno}.png">
                                     <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                 </div>
                                 <div class="input-options">
@@ -85,7 +60,7 @@
 										#set($tailStr=$c.bankacco)
 										#set($start=$tailStr.length() - 4)
 										#set($end=$tailStr.length())
-										<img src="${staticDomain}/static/family/images/bank_${c.bankno}.png">
+										<img src="${staticDomain}/family/images/bank_${c.bankno}.png">
                                         <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                     </a>
 								   	#end
@@ -104,17 +79,17 @@
 								<font id="cardRealAvailableDisplay" >${cardRealAvailableDisplay}</font>元
 							</div>
                         </li>
-                        <li>
+                        <li id="appvolErrMsg">
                             <span class="form-title">取现金额</span>
                             <input class="ipt-cash input-text" id="appvol" name="appvol"  maxlength="11" type="text" value=""><span style="margin-right: 20px;">元</span>
                             <span class="tips-normal"></span>
-                            <span id="appvolTips" class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span  class="tips-check"><i class="icon"></i><font id="appvolTips">验证提示</font></span>
                         </li>
-                        <li>
+                        <li id="tradePwdErrMsg">
                             <span class="form-title">交易密码</span>
                             <input class="ipt-password1 input-text" id="tradePwd" name="tradePwd" type="password" maxlength="20" value=""><a class="find hoverLine" href="${staticDomain}/setting/settingPassword.htm">忘记密码?</a>
                             <span class="tips-normal"></span>
-                            <span id="tradePwdTips" class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span  class="tips-check"><i class="icon"></i><font id="tradeTips">验证提示</font></span>
                         </li>
                         <li>
                             <input id="submit" class="input-button ok" type="submit" value="取&nbsp;现">
@@ -124,30 +99,8 @@
             </div>
         </div>
     </div>
-  <!--   <div class="footer footer-simple">
-    <div class="inner clearfix">
-        <div class="logo fl">
-            <img src="${staticDomain}/static/family/images/logo_130x55.png">
-        </div>
-        <div class="info fl">
-            <ul class="list">
-                <li>微信服务号：UFUfund</li>
-                <li>服务邮箱：<a href="mailto:service@ufufund.com">service@ufufund.com</a></li>
-                <li>海富通产品：400-8840-099</li>
-            </ul>
-        </div>
-        <div class="copyright fr">
-            <ul class="list">
-                <li>幼富通版权所有 ©2014</li>
-                <li><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></li>
-            </ul>
-        </div>
-    </div>
-	</div>-->
 </div>
-<script src="${staticDomain}/static/family/scripts/load.js"></script>
-<script src="${staticDomain}/static/family/scripts/register.js"></script>
-<script src="${staticDomain}/static/family/scripts/ufuCommon.js"></script>
+<script src="${staticDomain}/family/scripts/family-common.js"></script>
 <script type="text/javascript">
     $(function(){
         $(".body .notice .v2_1").click(function(){
@@ -157,49 +110,6 @@
 </script>
 <script type="text/javascript">
 	$(function(){
-	
-		// 覆盖register.js验证
-		var check_pwd1 = function (ipt) {
-			var value = ipt.val();
-            if (value == "") {
-            	showTips(ipt, "密码不能为空");
-				return false;
-            }
-            var regex1 = /\s+/;
-            if (regex1.test(value)) {
-                showTips(ipt, "密码中不允许有空格");
-				return false;
-            }
-			showTips(ipt, 0);
-			ipt.parents("li").removeClass("ok");
-			return true;
-		}
-		
-		// 增加安全中心验证
-		$(".ipt-cash").on("blur", function() {
-    			if($("#appvol").val() - $("#cardAvailable").val() > 0){
-    				showTips($("#appvol"), "取现金额大于本卡可取金额！");
-    				return false;
-    			}
-        });
-		
-		$("#tradePwd").on("blur", function() {
-			check_pwd1($("#tradePwd"));
-        });
-		
-		// 金额表单控制
-		$("#appvol").on("blur", function(){
-			var appvol = formatCurrency1($("#appvol").val());
-			if(appvol == '0.00'){
-				$("#appvol").val('');
-				showTips($(this), "请输入正确格式的金额，比如1000.00！");
-				//$("#appvolTips").html('请输入正确格式的金额，比如1000.00！');
-				//$("#appvolTips").show();
-			}else{
-				$("#appvol").val(appvol);
-			}
-		});
-		
 		// 点击银行卡
 		$(".card").on("click", function(){
 			$("#tradeacco").val($(this).attr("cardTradeacco"));
@@ -211,16 +121,37 @@
 		
 		// 表单提交时，验证	
 		$("#submit").on("click", function(){
-			if(!check_cash($("#appvol"))){
+			 //校验充值金额
+			var appamt=$("#appvol").val();
+			if(appamt==''){
+				$("#appvolErrMsg").addClass("error");
+				$("#appvolTips").html("充值金额不能为空！");
 				return false;
 			}
-			if(!check_pwd1($("#tradePwd"))){
+			appamt = formatCurrency1(appamt);
+			if(appamt == '0.00'){
+				$("#appvol").val('');
+				$("#appvolErrMsg").addClass("error");
+				$("#appvolTips").html("请输入正确格式的金额，比如1000.00！");
 				return false;
 			}
-    		if($("#appvol").val() - $("#cardAvailable").val() > 0){
-    			showTips($("#appvol"), "取现金额大于本卡可取金额！");
+			if($("#appvol").val() - $("#cardAvailable").val() > 0){
+				$("#appvolErrMsg").addClass("error");
+				$("#appvolTips").html("取现金额大于可用金额！");
     			return false;
     		}
+			else{
+				$("#appvol").val(appamt);
+				$("#appvolErrMsg").removeClass("error");
+			}
+			//校验交易密码
+			var tradepwd=$("#tradePwd").val();
+			if(tradepwd==''){
+				$("#tradePwdErrMsg").addClass("error");
+				$("#tradeTips").html("交易密码不能为空！");
+				return false;
+			}
+    		
 		});
 		
 	});
