--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/pay_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/pay_index.vm
@@ -4,24 +4,7 @@
     <title>幼富通 - 资产总览 - 充值</title>
 </head>
 <body>
-<div class="container center">
-    <div id="header">
-		<div class="topNav">
-			<div class="container">
-				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
-			</div>
-		</div>
-        <div class="container">
-            <a href="#" class="logo"></a>
-			<div class="nav">
-				<a href="${staticDomain}/family/session.htm">我的账户</a>
-				<a href="${staticDomain}/family/myufb.htm" class="active">幼富宝</a>
-				<a href="#">缴费明细</a>
-				<a href="${staticDomain}/family/helpAbout.htm">帮助中心</a>
-			</div>
-        </div>
-    </div>
+ 
     <div class="body">
         <div class="inner clearfix">
             <div class="title clearfix">
@@ -56,7 +39,7 @@
                 </div>
             </div>
             <div class="form-payInto">
-                <form class="common-form" action="${ufbDomain}/family/pay_result.htm" method="post">
+                <form class="common-form" action="${ufbDomain}/family/ufb/pay_result.htm" method="post">
 					 ${refreshTools.genInputHtml()}
 				     <input id="tradeacco" name="tradeacco" value="$!{curCard.tradeacco}" type="hidden"/>
                     <ul>
@@ -67,7 +50,7 @@
 										#set($tailStr=$curCard.bankacco)
 										#set($start=$tailStr.length() - 4)
 										#set($end=$tailStr.length())
-                                    <img src="${staticDomain}/static/family/images/bank_${curCard.bankno}.png">
+                                    <img src="${staticDomain}/family/images/bank_${curCard.bankno}.png">
                                     <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                 </div>
                                 <div class="input-options">
@@ -78,7 +61,7 @@
 										#set($tailStr=$card.bankacco)
 										#set($start=$tailStr.length() - 4)
 										#set($end=$tailStr.length())
-										<img src="${staticDomain}/static/family/images/bank_${card.bankno}.png">
+										<img src="${staticDomain}/family/images/bank_${card.bankno}.png">
                                         <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                     </a>
 							    		#end
@@ -88,17 +71,17 @@
                             <span class="tips-normal"></span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
-                        <li>
+                        <li id="appamtErrMsg">
                             <span class="form-title">充值金额</span>
                             <input class="ipt-cash input-text" name="appamt" id="appamt"  maxlength="11" type="text" value=""><span style="margin-right: 20px;">元</span>
                             <span class="tips-normal"></span>
-                            <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span class="tips-check"><i class="icon"></i><font id="appamtTips">验证提示</font></span>
                         </li>
-                        <li>
+                        <li id="tradePwdErrMsg">
                             <span class="form-title">交易密码</span>
                             <input class="ipt-password1 input-text" id="tradePwd" name="tradePwd" type="password" value=""><a class="find hoverLine" href="${staticDomain}/setting/settingPassword.htm">忘记密码?</a>
                             <span class="tips-normal"></span>
-                            <span id="tradePwdTips" class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span class="tips-check"><i class="icon"></i><font id="tradeTips">验证提示</font></span>
                         </li>
                         <li>
                             <input id="submit" class="input-button ok" type="submit" value="充&nbsp;值">
@@ -108,92 +91,55 @@
             </div>
         </div>
     </div>
-  <!--   <div class="footer footer-simple">
-    <div class="inner clearfix">
-        <div class="logo fl">
-            <img src="${staticDomain}/static/family/images/logo_130x55.png">
-        </div>
-        <div class="info fl">
-            <ul class="list">
-                <li>微信服务号：UFUfund</li>
-                <li>服务邮箱：<a href="mailto:service@ufufund.com">service@ufufund.com</a></li>
-                <li>海富通产品：400-8840-099</li>
-            </ul>
-        </div>
-        <div class="copyright fr">
-            <ul class="list">
-                <li>幼富通版权所有 ©2014</li>
-                <li><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></li>
-            </ul>
-        </div>
-    </div>
-	</div>-->
 </div>
-<script src="${staticDomain}/static/family/scripts/load.js"></script>
-<script src="${staticDomain}/static/family/scripts/register.js"></script>
-<script src="${staticDomain}/static/family/scripts/ufuCommon.js"></script>
+<script src="${staticDomain}/family/scripts/family-common.js"></script>
 <script type="text/javascript">
-    $(function(){
-        $(".body .notice .v2_1").click(function(){
-            $(".body .notice").hide();
-        });
-        
-        $(".input-options .card").click(function(){
-            $(this).addClass("active").siblings().removeClass("active");
-        });
+$(function(){
+    $(".body .notice .v2_1").click(function(){
+        $(".body .notice").hide();
     });
+    
+    $(".input-options .card").click(function(){
+        $(this).addClass("active").siblings().removeClass("active");
+    });
+});
 </script>
 <script type="text/javascript">
-	$(function(){
-		// 覆盖register.js验证
-		var check_pwd1 = function (ipt) {
-			var value = ipt.val();
-            if (value == "") {
-            	showTips(ipt, "密码不能为空");
-				return false;
-            }
-            var regex1 = /\s+/;
-            if (regex1.test(value)) {
-                showTips(ipt, "密码中不允许有空格");
-				return false;
-            }
-			
-			showTips(ipt, 0);
-			return true;
-		}
-		
-		$("#tradePwd").on("blur", function() {
-			check_pwd1($("#tradePwd"));
-        });
-		
-		// 金额表单控制
-		$("#appamt").on("blur", function(){
-			var appamt = formatCurrency1($("#appamt").val());
-			if(appamt == '0.00'){
-				$("#appamt").val('');
-				showTips($(this), "请输入正确格式的金额，比如1000.00！");
-				//$("#appamtTips").html('请输入正确格式的金额，比如1000.00！');
-				//$("#appamtTips").show();
-			}else{
-				$("#appamt").val(appamt);
-			}
-		});
-		
-		// 点击银行卡
-		$(".card").on("click", function(){
-			$("#tradeacco").val($(this).attr("tradeacco"));
-		});
-		
-		// 表单提交时，验证	
-		$("#submit").on("click", function(){
-			if(!check_cash($("#appamt"))){
-				return false;
-			}
-			if(!check_pwd1($("#tradePwd"))){
-				return false;
-			}
-		});
-		
+$(function(){
+	// 点击银行卡
+	$(".card").on("click", function(){
+		$("#tradeacco").val($(this).attr("tradeacco"));
 	});
+	
+	// 表单提交时，验证	
+	$("#submit").on("click", function(){
+	 //校验充值金额
+		var appamt=$("#appamt").val();
+		if(appamt==''){
+			$("#appamtErrMsg").addClass("error");
+			$("#appamtTips").html("充值金额不能为空！");
+			return false;
+		}
+		appamt = formatCurrency1(appamt);
+		if(appamt == '0.00'){
+			$("#appamt").val('');
+			$("#appamtErrMsg").addClass("error");
+			$("#appamtTips").html("请输入正确格式的金额，比如1000.00！");
+			return false;
+		}
+		else{
+			$("#appamt").val(appamt);
+			$("#appamtErrMsg").removeClass("error");
+		}
+		//校验交易密码
+		var tradepwd=$("#tradePwd").val();
+		if(tradepwd==''){
+			$("#tradePwdErrMsg").addClass("error");
+			$("#tradeTips").html("交易密码不能为空！");
+			return false;
+		}
+	});
+	
+});
 </script>
 </html>
