--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/cash_index.vm
@@ -121,11 +121,11 @@
 		
 		// 表单提交时，验证	
 		$("#submit").on("click", function(){
-			 //校验充值金额
+			 //校验取现金额
 			var appamt=$("#appvol").val();
 			if(appamt==''){
 				$("#appvolErrMsg").addClass("error");
-				$("#appvolTips").html("充值金额不能为空！");
+				$("#appvolTips").html("取现金额不能为空！");
 				return false;
 			}
 			appamt = formatCurrency1(appamt);
