--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
@@ -3,6 +3,8 @@
 <head>
 <title>幼富宝</title>
 <script type="text/javascript">
+		$('.nav a:eq(1)').addClass('active');
+		
         // 路径配置
         require.config({
             paths: {
