--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
@@ -4,6 +4,8 @@
 <title>我的账户</title>
 <script type="text/javascript">
     $(function(){
+    	$('.nav a:eq(0)').addClass('active');
+    	
         var lys = {
             timeId: "delayTime",
             delayedHide: function(elem){
